// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MgrOverlay matches snapshot when hidden 1`] = `
<transition-stub>
  <!--v-if-->
</transition-stub>
`;

exports[`MgrOverlay matches snapshot when visible 1`] = `
<transition-stub>
  <div class="mgr-overlay__wrapper layout horizontal center-horizontal center-vertical">
    <div class="mgr-overlay__content"></div>
  </div>
</transition-stub>
`;

exports[`MgrOverlay matches snapshot when visible and max width 1`] = `
<transition-stub>
  <div class="mgr-overlay__wrapper layout horizontal center-horizontal center-vertical">
    <div class="mgr-overlay__content max-width"></div>
  </div>
</transition-stub>
`;
